# printer-gui

./: .clang-format  .clang-format-ignore  .gitignore  LICENSE  README.md  meson.build
include/: buffer.h  font.h
include/gui/: gui_box.h  gui_element.h  gui_lable.h  gui_types.h
include/gui/layout/: gui_layout.h  gui_layout_horizontal.h  gui_layout_vertical.h
src/: buffer.c  buffer.h  font.c  main.c  meson.build  pixel.h  stbi_write_impl.c
src/gui/: gui_box.c  gui_element.c  gui_lable.c  meson.build
src/gui/layout/: gui_layout.c  gui_layout_horizontal.c  gui_layout_vertical.c
